# ai-assistant

./: .env  .gitignore  Dockerfile  Makefile  collected_project_files.json  collected_py_files.json  compose.yaml  create_tests.py  en.json  input.webm  kek.json  local.compose.yaml  login_script.py  lol.json  nginx.conf  prod.env  scrape.py  send_test_message.py  service.session  service.txt  test.html  test.json  test.py
shared/: pyproject.toml
shared/src/shared/: config.py  settings.json  upload_settings.json  watcher_settings.json
shared/src/shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/src/shared/abstractions/: singleton.py
shared/src/shared/abstractions/repositories/: __init__.py  abstract.py  chat.py  chat_type.py  emojis.py  post.py  post_request.py  post_to_publish.py  proxy.py  story.py  story_request.py  story_to_publish.py  update_post.py  user.py  uuid_pk_abstract.py  worker_message.py
shared/src/shared/abstractions/services/: __init__.py  consumer.py  emoji.py  scheduler.py  upload.py  watcher_client.py
shared/src/shared/dependencies/repositories/: __init__.py  chat.py  chat_type.py  emoji.py  post.py  post_request.py  post_to_publish.py  proxy.py  sessionmaker.py  story.py  story_request.py  story_to_publish.py  update_post.py  user.py  worker_message.py
shared/src/shared/dependencies/services/: __init__.py  emoji.py  get_scheduler.py  (+2 more)
shared/src/shared/services/: __init__.py  emoji.py  scheduler.py
shared/src/shared/settings/: __init__.py  bot.py  db.py  docker.py  environment.py  jwt.py  miniapp.py  scheduler.py  worker.py
(+336 files in other folders)
