[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "shared"
version         = "0.1.0"
description     = "Shared DB models, repositories and utilities"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11",
  "pydantic-settings>=2.9.1",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.15",
  "alembic-postgresql-enum>=1.7",
  "greenlet>=3.2.2",
  "fastapi>=0.115.12",
  "aiofiles>=24.1.0",
  "apscheduler>=3.11.0",
  "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["shared*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"shared" = [
  "settings.json",
  "infrastructure/main_db/alembic.ini",
  "infrastructure/main_db/migrations/*"
]
